--- a/成語填空遊戲.html
+++ b/成語填空遊戲.html
@@ -36,6 +36,46 @@
             { text: "杯弓蛇影", pinyin: "bēi gōng shé yǐng", definition: "比喻因疑神疑鬼而引起恐懼。" },
             { text: "盲人摸象", pinyin: "máng rén mō xiàng", definition: "比喻對事物只有片面的了解，不能做出全面的判斷。" },
             { text: "車水馬龍", pinyin: "chē shuǐ mǎ lóng", definition: "形容車馬往來不絕的繁華熱鬧景象。" },
+            { text: "鶴立雞群", pinyin: "hè lì jī qún", definition: "像鶴站在雞群中一樣。比喻一個人的才能或儀表在一群人裡頭顯得很突出。" },
+            { text: "鷸蚌相爭", pinyin: "yù bàng xiāng zhēng", definition: "比喻兩相爭執，結果兩敗俱傷，讓第三者占了便宜。" },
+            { text: "鱗次櫛比", pinyin: "lín cì zhì bǐ", definition: "像魚鱗和梳子齒那樣密密麻麻地排列著。多用來形容房屋或船隻等排列得又多又整齊。" },
+            { text: "膽大心細", pinyin: "dǎn dà xīn xì", definition: "形容辦事果斷，考慮周密。" },
+            { text: "舉一反三", pinyin: "jǔ yī fǎn sān", definition: "從一件事情類推，而知道其他許多事情。形容人善於學習，能觸類旁通。" },
+            { text: "苦口婆心", pinyin: "kǔ kǒu pó xīn", definition: "形容懷著慈愛的心腸，懇切地、不厭其煩地勸告他人。" },
+            { text: "裝聾作啞", pinyin: "zhuāng lóng zuò yǎ", definition: "假裝沒聽見，不說話。指故意不理睬，假裝不知道。" },
+            { text: "覆水難收", pinyin: "fù shuǐ nán shōu", definition: "倒在地上的水難以收回。比喻事情已成定局，無法挽回。" },
+            { text: "言簡意賅", pinyin: "yán jiǎn yì gāi", definition: "言辭簡練，意思完備。" },
+            { text: "變本加厲", pinyin: "biàn běn jiā lì", definition: "指情況變得比本來更加嚴重。" },
+            { text: "貪得無厭", pinyin: "tān dé wú yàn", definition: "貪心到沒有滿足的時候。" },
+            { text: "賞心悅目", pinyin: "shǎng xīn yuè mù", definition: "指看到美好的景色而心情愉快。" },
+            { text: "輕而易舉", pinyin: "qīng ér yì jǔ", definition: "形容事情很容易做，不費力氣。" },
+            { text: "逆水行舟", pinyin: "nì shuǐ xíng zhōu", definition: "逆著水流的方向行船。比喻不努力就要後退。" },
+            { text: "迫不及待", pinyin: "pò bù jí dài", definition: "急迫得不能再等待。" },
+            { text: "門庭若市", pinyin: "mén tíng ruò shì", definition: "門前和院子裡像市場一樣。形容來的人很多，非常熱鬧。" },
+            { text: "防不勝防", pinyin: "fáng bù shèng fáng", definition: "形容防備不過來。" },
+            { text: "隨遇而安", pinyin: "suí yù ér ān", definition: "能順應環境，在任何境遇中都能滿足。" },
+            { text: "雪中送炭", pinyin: "xuě zhōng sòng tàn", definition: "在下雪天給人送炭取暖。比喻在別人急需時給予物質上或精神上的幫助。" },
+            { text: "青出於藍", pinyin: "qīng chū yú lán", definition: "比喻學生超過老師或後人勝過前人。" },
+            { text: "靜觀其變", pinyin: "jìng guān qí biàn", definition: "靜靜地觀察事物的發展變化。" },
+            { text: "顧名思義", pinyin: "gù míng sī yì", definition: "從名稱想到它的含義。" },
+            { text: "風馳電掣", pinyin: "fēng chí diàn chè", definition: "形容非常迅速，像風吹電閃一樣。" },
+            { text: "飛黃騰達", pinyin: "fēi huáng téng dá", definition: "比喻官職、地位等迅速提升。" },
+            { text: "食古不化", pinyin: "shí gǔ bù huà", "definition": "指對古代的東西學而不懂，不善於運用。" },
+            { text: "首當其衝", pinyin: "shǒu dāng qí chōng", "definition": "比喻最先受到攻擊或遭到災難。" },
+            { text: "黔驢技窮", pinyin: "qián lǘ jì qióng", "definition": "比喻有限的一點本領也已經用完了。" },
+            { text: "龍潭虎穴", "pinyin": "lóng tán hǔ xué", "definition": "比喻極其險惡的地方。" },
+            { text: "無的放矢", "pinyin": "wú dì fàng shǐ", "definition": "沒有目標亂射箭。比喻說話做事沒有明確目的，或毫無根據地進行攻擊。" },
+            { text: "無懈可擊", "pinyin": "wú xiè kě jī", "definition": "沒有任何可以攻擊的漏洞。形容十分嚴密，找不到一點缺點。" },
+            { text: "畫地自限", "pinyin": "huà dì zì xiàn", "definition": "比喻自己束縛自己。" },
+            { text: "粗心大意", "pinyin": "cū xīn dà yì", "definition": "做事不細心，馬虎隨便。" },
+            { text: "舉足輕重", "pinyin": "jǔ zú qīng zhòng", "definition": "所處地位重要，一舉一動都關係到全局。" },
+            { text: "蓬蓽生輝", "pinyin": "péng bì shēng huī", "definition": "使貧寒的家園增添光彩（多用作對客人來訪的客氣話）。" },
+            { text: "裝模作樣", "pinyin": "zhuāng mú zuò yàng", "definition": "故意做作，不自然。" },
+            { text: "赤子之心", "pinyin": "chì zǐ zhī xīn", "definition": "比喻人心地純潔善良。" },
+            { text: "千鈞一髮", "pinyin": "qiān jūn yī fà", "definition": "比喻情況萬分危急。" },
+            { text: "大刀闊斧", "pinyin": "dà dāo kuò fǔ", "definition": "比喻辦事果斷而有魄力。" },
+            { text: "大公無私", "pinyin": "dà gōng wú sī", "definition": "指辦事公正，沒有私心。" },
+            { text: "安然無恙", "pinyin": "ān rán wú yàng", "definition": "原指人平安沒有疾病。現泛指事物平安未遭損害。"  },
         ];
         // --- 成語列表結束 ---
 
